header alignment fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3472,7 +3472,7 @@ ul.feature-icons li:nth-child(2) {
 }
 
 #wrapper section > header {
-  padding: 0rem 5rem 0 5rem;
+  padding: 0rem 10rem 0 5rem;
   width: 35rem;
 }
 
